<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/webSupportArticleCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginLeft="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginRight="4dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:id="@+id/webSupportArticleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web_support_article_title"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/webSupportArticleContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/web_support_article_content" />
    </LinearLayout>

</androidx.cardview.widget.CardView>