<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <!-- Search Icon -->
    <item
        android:id="@+id/articleSearch"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/music_search_button"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />
</menu>